chore: Toggle bump-minor-pre-major

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,7 @@
   "packages": {
     ".": {
       "release-type": "ruby",
-      "bump-minor-pre-major": true,
+      "bump-minor-pre-major": false,
       "versioning": "default",
       "include-component-in-tag": false,
       "include-v-in-tag": false,
